<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101010"
    tools:context=".player_setup">

    <TextView
        android:id="@+id/tvPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/player1Name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPlayer1"
        app:layout_constraintStart_toStartOf="@+id/etPlayer1" />

    <EditText
        android:id="@+id/etPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:background="#A5A5A5"
        android:ems="10"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvEnterNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/enterPlayerNames"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/button_type"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnStart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:background="#A5A5A5"
        android:ems="10"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tvPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/player2Name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etPlayer2"
        app:layout_constraintStart_toStartOf="@+id/etPlayer2" />

</androidx.constraintlayout.widget.ConstraintLayout>